--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "FirstProject",
     "main": "src/index.js",
     "scripts": {
-        "start": "nodemon --inspect src/index.js",
+        "start": "node src/index.js",
         "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
